--- a/app/views/admin/admins/_user_password_change_modal.html.erb
+++ b/app/views/admin/admins/_user_password_change_modal.html.erb
@@ -22,7 +22,7 @@
             </div>
 
             <div class="actions">
-              <button class="btn btn-modal-submit" type="submit">SUBMIT</button>
+              <button class="btn btn-modal-submit btn-outline-transparent" type="submit">SUBMIT</button>
             </div>
         <% end %>
       </div>
