--- a/app/views/influencers/_profile_modal.erb
+++ b/app/views/influencers/_profile_modal.erb
@@ -5,7 +5,7 @@
   <div class="modal-dialog influencer-profile-modal" role="document">
     <div class="modal-content view-profile-modal">
       <div class="modal-header">
-        <button type="button" class="close view-profile-modal-close" data-dismiss="modal" aria-label="Close"><span
+        <button type="button" class="close view-profile-modal-close btn-outline-transparent" data-dismiss="modal" aria-label="Close"><span
         aria-hidden="true">&times;</span></button>
         <h4 class="modal-title" id="myModalLabel"></h4>
       </div>
