--- a/app/views/shared/_brand_log_in_sign_up_form.html.erb
+++ b/app/views/shared/_brand_log_in_sign_up_form.html.erb
@@ -5,11 +5,11 @@
   <div class="login-modal-aside-description">
     Joining Brand Reach puts you in front of influencers from top industries that are searching to connect with brands like you.
   </div>
-  <button area-label="Close" class="close new-modal-close display-none" id="new-modal-close-responsive" data-dismiss="modal" type="button">&times;</button>
+  <button area-label="Close" class="close new-modal-close display-none btn-outline-transparent" id="new-modal-close-responsive" data-dismiss="modal" type="button">&times;</button>
 </div>
 
 <div class="new-modal-body__content">
-  <button area-label="Close" class="close new-modal-close" id="new-modal-close-button" data-dismiss="modal" type="button">&times;</button>
+  <button area-label="Close" class="close new-modal-close btn-outline-transparent" id="new-modal-close-button" data-dismiss="modal" type="button">&times;</button>
   <div class="brand-login-modal-content-description">
     <div class="new-modal-title">FOR BRANDS</div>
 
@@ -36,7 +36,7 @@
           <ul id="parsley-id-6194" class="parsley-errors-list"></ul>
         </div>
 
-        <button class="btn-modal" type="submit">
+        <button class="btn-modal btn-outline-transparent" type="submit">
           Login
         </button>
 
@@ -82,7 +82,7 @@
               <ul id="parsley-id-6194" class="parsley-errors-list"></ul>
             </div>
 
-            <button class="btn-modal" type="submit">
+            <button class="btn-modal btn-outline-transparent" type="submit">
               Sign Up
             </button>
           </form>
