--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -195,7 +195,7 @@
         <div class="col-md-9 col-sm-9 col-xs-12 search-top-margin">
           <!-- search form -->
           <form action="<%= current_user.brand? ? explores_path : search_influencers_path %>" method="get" class="form-group">
-            <button type="submit" class="btn-circle center-block pull-right">GO</button>
+            <button type="submit" class="btn-circle center-block pull-right btn-outline-transparent">GO</button>
             <input value="<%= params[:search_key].presence %>" name="search_key" class="form-control rounded-input-box"
                    type="search" placeholder="Enter Keywords..." id="search-keyword" maxlength="100"/>
             <span class="glyphicon glyphicon-search"></span>
@@ -226,7 +226,7 @@
 </footer>
 
 <%#= render partial: 'shared/profile_image_crop', locals: { user: current_user }%>
-<div class="loader"></div>
+<div class="loader" id="page_loader"></div>
 
 <!-- generic modal container -->
 <div class="modal-container"></div>
