--- a/app/views/profile/_add_facebook_account.html.erb
+++ b/app/views/profile/_add_facebook_account.html.erb
@@ -4,7 +4,7 @@
         <div class="modal-content">
           <div class="modal-header add-fb-modal-header">
             <a href="#"><%= image_tag('logo_white.svg', :class => 'img-responsive login-modal-logo', :alt => 'logo') %></a>
-            <button type="button" class="close add-fb-account-close" data-dismiss="modal">&times;</button>
+            <button type="button" class="close add-fb-account-close btn-outline-transparent" data-dismiss="modal">&times;</button>
           </div>
           <div class="modal-body">
             <div class="add-another-account">Add Pages</div>
@@ -37,7 +37,7 @@
 
                     <br/>
 
-                    <input class="btn-inf-fb-connect load-page" type="submit" value="CONNECT"/>
+                    <input class="btn-inf-fb-connect load-page" type="submit" value="CONNECT" onclick="javascript:document.getElementById('page_loader').style.display='block';"/>
                 </form>
             </div>
 
