--- a/app/views/shared/_forgot_password.erb
+++ b/app/views/shared/_forgot_password.erb
@@ -8,11 +8,11 @@
           <div class="login-modal-aside-description">
             Joining Brand Reach puts you in front of influencers from top industries that are searching to connect with brands like you.
           </div>
-          <button area-label="Close" class="close new-modal-close display-none" id="new-modal-close-responsive" data-dismiss="modal" type="button">&times;</button>
+          <button area-label="Close" class="close new-modal-close display-none btn-outline-transparent" id="new-modal-close-responsive" data-dismiss="modal" type="button">&times;</button>
         </div>
 
         <div class="new-modal-body__content">
-          <button area-label="Close" class="close new-modal-close" id="new-modal-close-button" data-dismiss="modal" type="button">&times;</button>
+          <button area-label="Close" class="close new-modal-close btn-outline-transparent" id="new-modal-close-button" data-dismiss="modal" type="button">&times;</button>
           <div class="brand-login-modal-content-description">
             <div class="new-modal-title">FOR BRANDS</div>
             <div class="reset-password raleway-font">Reset Password</div>
@@ -29,7 +29,7 @@
                     <input data-parsley-id="4091" data-parsley-required="true" data-parsley-type="email" class="new-modal-input" placeholder="Please enter your registered email address" name="user[email]" id="user_email" type="text">
                   </div>
 
-                  <button class="btn-modal" type="submit">
+                  <button class="btn-modal btn-outline-transparent" type="submit">
                     Submit
                   </button>
 
