--- a/app/views/shared/_footer_other_page.erb
+++ b/app/views/shared/_footer_other_page.erb
@@ -14,11 +14,11 @@
           <i class="fa fa-lg fa-twitter"></i>
         </a>
         <span class="space"></span>
-        <a href="#" target="_blank">
+        <a href="https://www.linkedin.com/in/thebrandreach" target="_blank">
           <i class="fa fa-lg fa-linkedin"></i>
         </a>
         <span class="space"></span>
-        <a href="#" target="_blank">
+        <a href="https://plus.google.com/101686370238396693350/about" target="_blank">
           <i class="fa fa-lg fa-google-plus"></i>
         </a>
       </div>
