- Show number of post click and number of link clicks in campaign page of influencers and brands - Solved glitch problem of graph - Images for some influencers are not loaded in Brand Explore , So instead of that we are showing default image - set facebook activity modal's close button css fixed

--- a/app/views/campaigns/brand_campaign.html.erb
+++ b/app/views/campaigns/brand_campaign.html.erb
@@ -101,6 +101,8 @@
               <th>Reach</th>
               <th>Comments</th>
               <th>Shares</th>
+              <th>Post Clicks</th>
+              <th>Post Link Clicks</th>
             </tr>
             </thead>
 
@@ -130,6 +132,8 @@
               <td><%= campaign.number_of_post_reach_of_post %></td>
               <td><%= campaign.number_of_comments %></td>
               <td><%= campaign.number_of_shares %></td>
+              <td><%= campaign.post_click_number %></td>
+              <td><%= campaign.post_link_click_number %></td>
             </tr>
             <% end %>
             </tbody>
