--- a/app/assets/stylesheets/campaigns.css
+++ b/app/assets/stylesheets/campaigns.css
@@ -419,8 +419,10 @@ only screen and (max-width: 560px) {
     .performance_table > tbody > tr > td:nth-of-type(2):before { content: "Campaign Name : "; font-weight: bold; }
     .performance_table > tbody > tr > td:nth-of-type(3):before { content: "Post Likes : ";  font-weight: bold; }
     .performance_table > tbody > tr > td:nth-of-type(4):before { content: "Reach : ";  font-weight: bold; }
-    .performance_table > tbody > tr > td:nth-of-type(5):before { content: "Starts : ";  font-weight: bold; }
-    .performance_table > tbody > tr > td:nth-of-type(6):before { content: "Ends : ";  font-weight: bold; }
+    .performance_table > tbody > tr > td:nth-of-type(5):before { content: "Post Clicks : ";  font-weight: bold; }
+    .performance_table > tbody > tr > td:nth-of-type(6):before { content: "Post Link Clicks : ";  font-weight: bold; }
+    .performance_table > tbody > tr > td:nth-of-type(7):before { content: "Starts : ";  font-weight: bold; }
+    .performance_table > tbody > tr > td:nth-of-type(8):before { content: "Ends : ";  font-weight: bold; }
 
     .engagement_table > tbody > tr > td:nth-of-type(2):before { content: "Campaign Name : "; font-weight: bold; }
     .engagement_table > tbody > tr > td:nth-of-type(3):before { content: "Likes : ";  font-weight: bold; }
@@ -432,6 +434,8 @@ only screen and (max-width: 560px) {
     .brand_campaign_performance_table > tbody > tr > td:nth-of-type(5):before { content: "Reach : ";  font-weight: bold; }
     .brand_campaign_performance_table > tbody > tr > td:nth-of-type(6):before { content: "Comments : ";  font-weight: bold; }
     .brand_campaign_performance_table > tbody > tr > td:nth-of-type(7):before { content: "Shares : ";  font-weight: bold; }
+    .brand_campaign_performance_table > tbody > tr > td:nth-of-type(8):before { content: "Post Clicks : ";  font-weight: bold; }
+    .brand_campaign_performance_table > tbody > tr > td:nth-of-type(9):before { content: "Post Link Clicks : ";  font-weight: bold; }
 
     .statistic-table > tbody > tr > td:nth-of-type(1):before { content: "Country/City : "; font-weight: bold; }
     .statistic-table > tbody > tr > td:nth-of-type(2):before { content: "Likes : ";  font-weight: bold; }
@@ -1188,3 +1192,10 @@ only screen and (max-width: 768px) {
     background-color: #F2F6F7;
 }
 /* end of on-off switch style */
+
+.fb-activity-modal-content .set-facebook-activity-modal-close {
+    margin-top: -50px;
+    margin-right: -20px;
+    font-size: 3.4em;
+    font-weight: 300;
+}
