--- a/app/views/campaigns/_add_social_activity_modal.html.erb
+++ b/app/views/campaigns/_add_social_activity_modal.html.erb
@@ -4,7 +4,7 @@
         <div class="modal-content fb-activity-modal-content">
           <div class="modal-header profile-image-modal-header set-facebook-activity">
             <a href="#"><%= image_tag('Logo.png', :class => 'img-responsive login-modal-logo logo-size', :alt => 'logo') %></a>
-            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <button type="button" class="close btn-outline-transparent set-facebook-activity-modal-close" data-dismiss="modal">&times;</button>
           </div>
           <div class="modal-body">
             <div class="add-another-account">Set facebook activity</div>
