--- a/app/views/campaigns/influencer_campaign.html.erb
+++ b/app/views/campaigns/influencer_campaign.html.erb
@@ -36,6 +36,8 @@
           <th>Campaign Name</th>
           <th>Post Likes</th>
           <th>Reach</th>
+          <th>Post Clicks</th>
+          <th>Post Link Clicks</th>
           <th>Starts</th>
           <th>Ends</th>
         </tr>
@@ -61,6 +63,8 @@
                   </td>
                   <td><%= campaign.number_of_likes %></td>
                   <td><%= campaign.number_of_post_reach_of_post %></td>
+                  <td><%= campaign.post_click_number %></td>
+                  <td><%= campaign.post_link_click_number %></td>
                   <td><%= campaign.start_date.present? ? campaign.start_date.strftime('%B %d, %Y') : 'NA' %></td>
                   <td><%= campaign.end_date.present? ? campaign.end_date.strftime('%B %d, %Y') : 'NA' %></td>
                 </tr>
